Fix horizontal scrollbar when resizing index tables

--- a/app/assets/stylesheets/admin/components/_index_table.scss
+++ b/app/assets/stylesheets/admin/components/_index_table.scss
@@ -20,6 +20,10 @@
   text-align: left;
   width: 100%;
 
+  @include min-width($bpFull) {
+    min-width: 0;
+  }
+
   .monospace {
     font-size: 14px;
   }
